--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "token": "",
     "prefix": ".",
     "mongo_key": "",
-    "accessToken": "",
-    "canalCategoriaCarrinho": "",
+    "accessToken": "APP_USR-7702207532262891-072823-cf7aaa9992077bc0a6f58b69318e4336-1001887432",
+    "canalCategoriaCarrinho": "▬▬▬▬ 『compras』 ▬▬▬▬",
     "canalLogs": ""
 }
